NEWS - user visible changes				-*- outline -*-

-----------------------------------------------------------------------

* opensource COBOL 4J 1.0.11

** New Features
  (1) Add -j, -o, -java-file-dir, -class-file-dir to control the file paths of generated files

** Bug fixes
  (1) Fix a bug related to RELATIVE files
  (2) Fix a bug of the computation of signs of numbers

-----------------------------------------------------------------------

* opensource COBOL 4J 1.0.10

** Bug fixes
  (1) Fix a bug related to string literals containing specified multi-byte characters
    * For example, "十郎"

** Miscellaneous
  (1) Fix some tests

-----------------------------------------------------------------------

* opensource COBOL 4J 1.0.9

** New Features
    (1) Implement -constant option and $IF macro
    (2) Improve the readability of Shift_JIS string literals in generated Java files

** Bug fixes
    (1) Fix some mathematical functions
    (2) Fix error messages for invalid MOVE statements
    (3) Fix some broken tests

** Miscellaneous
    (1) Remove some unused variables in generated Java files
    (2) Fix some warning messages of make command

-----------------------------------------------------------------------

* opensource COBOL 4J 1.0.8

** New Features
    (1) Implement RELATIVE files
       (a) Pass all NIST tests on Relative files
    (2) Implement ${DESTDIR} of libcobj/Makefile

** Bug fixes
    (1) Fix move statement for COMP-3
       (a) Fix moveFrom method of CobolNumericPackedField
    (2) Fix warnings found by static analyzers

** Miscellaneous
    (1) Format all C source code in cobj/ using clang-format

-----------------------------------------------------------------------

* opensource COBOL 4J 1.0.7

** New Features
    (1) Implement DELETE FILE statement of SEQUENTIAL files and LINE SEQUENTIAL files
    (2) Improve Java interface, much better way to call COBOL from Java
    (3) Add -java-package option
    (4) Implement SET ENVIRONMENT statement